--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="caixa-principal">
-        <h1>o quanto conhecemos sobre o piscicologico de uma criança</h1>
+        <h1>o quanto conhecemos sobre o psicológico de uma criança</h1>
         <div class="caixa-perguntas">
              você já sabe quais são as pergguntas que irão nortear sua missão ? 
         </div>
